Changed a linked list to an array.  Performance is drastically better.  Try holding down the 'f' key right after startup in the old version, and you'll see it bog down quickly.  This will never bog down.